--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
         <dependency>
             <groupId>capital.scalable</groupId>
             <artifactId>spring-auto-restdocs-core</artifactId>
-            <version>1.0.10</version>
+            <version>1.0.11</version>
             <scope>test</scope>
         </dependency>
 
@@ -70,21 +70,52 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.asciidoctor</groupId>
+                <artifactId>asciidoctor-maven-plugin</artifactId>
+                <version>1.5.3</version>
+                <executions>
+                    <execution>
+                        <id>generate-docs</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>process-asciidoc</goal>
+                        </goals>
+                        <configuration>
+                            <backend>html</backend>
+                            <doctype>book</doctype>
+                        </configuration>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.springframework.restdocs</groupId>
+                        <artifactId>spring-restdocs-asciidoctor</artifactId>
+                        <version>2.0.0.RELEASE</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+
 
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
+                <version>2.7</version>
                 <executions>
                     <execution>
-                        <id>copy-index-public</id>
+                        <id>copy-resources</id>
                         <phase>prepare-package</phase>
                         <goals>
                             <goal>copy-resources</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${project.build.outputDirectory}/public</outputDirectory>
+                            <outputDirectory>
+                                ${project.build.outputDirectory}/static/docs
+                            </outputDirectory>
                             <resources>
                                 <resource>
-                                    <directory>${project.build.directory}/generated-docs</directory>
+                                    <directory>
+                                        ${project.build.directory}/generated-docs
+                                    </directory>
                                 </resource>
                             </resources>
                         </configuration>
@@ -122,7 +153,7 @@
                             <docletArtifact>
                                 <groupId>capital.scalable</groupId>
                                 <artifactId>spring-auto-restdocs-json-doclet</artifactId>
-                                <version>1.0.10</version>
+                                <version>1.0.11</version>
                             </docletArtifact>
                             <destDir>generated-javadoc-json</destDir>
                             <reportOutputDirectory>${project.build.directory}</reportOutputDirectory>
@@ -132,6 +163,7 @@
                     </execution>
                 </executions>
             </plugin>
+
         </plugins>
     </build>
 
