--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,7 @@
             <plugin>
                 <groupId>org.asciidoctor</groupId>
                 <artifactId>asciidoctor-maven-plugin</artifactId>
+                <version>1.5.6</version>
                 <executions>
                     <execution>
                         <id>generate-docs</id>
