--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,15 +17,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v2.5.0
       with:
         java-version: '11'
         distribution: 'adopt'
-    - name: Cache Maven packages
-      uses: actions/cache@v2.1.6
-      with:
-        path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2
+        cache: 'maven'
     - name: Build with Maven
       run: mvn -B package --file pom.xml
